UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/System_Order_Info__c.object-meta.xml
<CustomObject>
    <label>System Order Info</label>
    <nameField>
        <label>System Order Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Order Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>