UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/City_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>City_Abbreviation__c</fullName>
    <label>City Abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>