UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <formula>Text(Order__r.Contract_Schedule__r.ContractTerm)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractTerm</label>
    <type>Text</type>
</CustomField>