UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Control_Number__c</fullName>
    <label>Control Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>