UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/DI_711_Order_Request__c.field-meta.xml
<CustomField>
    <fullName>DI_711_Order_Request__c</fullName>
    <label>DI 711 Order Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>