UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/Email_List__c.field-meta.xml
<CustomField>
    <fullName>Email_List__c</fullName>
    <label>Email List</label>
    <type>TextArea</type>
</CustomField>