UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>