UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/Group_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Order_Id__c</fullName>
    <label>Group Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>