UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>System Order Infos</relationshipLabel>
    <relationshipName>System_Order_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>