UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/ReserveConfirmationId__c.field-meta.xml
<CustomField>
    <fullName>ReserveConfirmationId__c</fullName>
    <label>ReserveConfirmationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>