UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Address</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>System Order Infos</relationshipLabel>
    <relationshipName>System_Order_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>