UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/WireCentre__c.field-meta.xml
<CustomField>
    <fullName>WireCentre__c</fullName>
    <label>WireCentre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>