UCF-APR2.4/ftr main/force-app/main/default/objects/System_Order_Info__c/fields/WTN__c.field-meta.xml
<CustomField>
    <fullName>WTN__c</fullName>
    <label>WTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>